force-app/main/default/objects/Lead/fields/Volunteer_Service_Details__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Service_Details__c</fullName>
    <label>Service, Unit, Station or Ship</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>