force-app/main/default/objects/Lead/fields/Volunteer_Travel_Regions__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Travel_Regions__c</fullName>
    <label>Volunteer Travel Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East Midlands</fullName>
            </value>
            <value>
                <fullName>Greater London</fullName>
            </value>
            <value>
                <fullName>North East England</fullName>
            </value>
            <value>
                <fullName>North West England</fullName>
            </value>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>South West England</fullName>
            </value>
            <value>
                <fullName>South East England</fullName>
            </value>
            <value>
                <fullName>Wales</fullName>
            </value>
            <value>
                <fullName>West Midlands</fullName>
            </value>
            <value>
                <fullName>Yorkshire &amp; the Humber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>