force-app/main/default/objects/Lead/fields/Web_Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Web_Form_Type__c</fullName>
    <description>Identifies the public form that created the Lead. Stable across NTE editions.</description>
    <label>Web Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Sponsor Application Form</fullName>
            </value>
            <value>
                <fullName>Partner Sponsor Exhibition Space Questions</fullName>
            </value>
            <value>
                <fullName>Partner / Sponsor Expression of Interest</fullName>
            </value>
            <value>
                <fullName>Exhibitor Expression of Interest</fullName>
            </value>
            <value>
                <fullName>Partner / Sponsor Application</fullName>
            </value>
            <value>
                <fullName>Exhibitor Application</fullName>
            </value>
            <value>
                <fullName>Guest Registration</fullName>
            </value>
            <value>
                <fullName>Staff Details Update</fullName>
            </value>
            <value>
                <fullName>Partner / Sponsor Staff Update</fullName>
            </value>
            <value>
                <fullName>Exhibitor Staff Update</fullName>
            </value>
            <value>
                <fullName>Heavy Vehicle Details</fullName>
            </value>
            <value>
                <fullName>Logo Update</fullName>
            </value>
            <value>
                <fullName>Volunteer Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>