force-app/main/default/objects/Lead/listViews/NTE_Expressions_of_Interest.listView-meta.xml
<ListView>
    <fullName>NTE_Expressions_of_Interest</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Web_Form_Type__c</columns>
    <columns>NTE_Event_Code__c</columns>
    <columns>NTE_Interest_Progressed__c</columns>
    <columns>NTE_Interest_Not_Progressed__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Web_Form_Type__c</field>
        <operation>equals</operation>
        <value>Partner / Sponsor Expression of Interest,Exhibitor Expression of Interest</value>
    </filters>
    <filters>
        <field>LEAD.CONVERTED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>NTE_Interest_Progressed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>NTE_Interest_Not_Progressed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>NTE_Event_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>NTE Expressions of Interest</label>
</ListView>