force-app/main/default/objects/Lead/listViews/NTE_Guest_Registrations.listView-meta.xml
<ListView>
    <fullName>NTE_Guest_Registrations</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>NTE_Event_Code__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Web_Form_Type__c</field>
        <operation>equals</operation>
        <value>Guest Registration</value>
    </filters>
    <filters>
        <field>LEAD.CONVERTED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>NTE Guest Registrations</label>
</ListView>