force-app/main/default/objects/Lead/listViews/NTE_Unmatched_Updates.listView-meta.xml
<ListView>
    <fullName>NTE_Unmatched_Updates</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Web_Form_Type__c</columns>
    <columns>Target_Booking_Reference__c</columns>
    <columns>NTE_Update_Status__c</columns>
    <columns>NTE_Update_Error__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NTE_Update_Status__c</field>
        <operation>equals</operation>
        <value>No Matching Booking,Ambiguous Booking Reference,Failed</value>
    </filters>
    <label>NTE Unmatched Updates</label>
</ListView>