force-app/main/default/objects/Lead/listViews/Volunteer_Applications.listView-meta.xml
<ListView>
    <fullName>Volunteer_Applications</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>Volunteer_Opportunities__c</columns>
    <columns>Volunteer_Travel_Regions__c</columns>
    <columns>Volunteer_DBS_Willing__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Web_Form_Type__c</field>
        <operation>equals</operation>
        <value>Volunteer Application</value>
    </filters>
    <filters>
        <field>Interested_in_Volunteering__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Volunteer Application</value>
    </filters>
    <label>Volunteer Applications</label>
</ListView>